--- a/.gitignore
+++ b/.gitignore
@@ -1,90 +1,109 @@
-# 文件夹
-.idea/*
-*/.idea/*
-.vscode/*
-*/.vscode/*
-.stfolder/*
-*/.stfolder/*
-.ipynb_checkpoints/*
-*/.ipynb_checkpoints/*
-*/__pycache__/*
+﻿*.pyc
+*.swp
+=======
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
 
-
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-*.pyc
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
+# C extensions
 *.so
-*.dylib
-*.dll
 
-# Fortran module files
-*.mod
+# Distribution / packaging
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
 
-# Executables
-*.exe
-*.out
-*.app
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
 
-# =========================
-# Operating System Files
-# =========================
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*,cover
+.hypothesis/
 
-# OSX
-# =========================
+# Translations
+*.mo
+*.pot
 
-.DS_Store
-.AppleDouble
-.LSOverride
+# Django stuff:
+*.log
+local_settings.py
 
-# Thumbnails
-._*
+# Flask stuff:
+instance/
+.webassets-cache
 
-# Files that might appear on external disk
-.Spotlight-V100
-.Trashes
+# Scrapy stuff:
+.scrapy
 
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+# Sphinx documentation
+docs/_build/
 
-# Windows
-# =========================
+# PyBuilder
+target/
 
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
+# IPython Notebook
+.ipynb_checkpoints
 
-# Folder config file
-Desktop.ini
+# pyenv
+.python-version
 
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
+# celery beat schedule file
+celerybeat-schedule
 
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
+# dotenv
+.env
 
-# Windows shortcuts
-*.lnk
+# virtualenv
+venv/
+ENV/
 
-*.stignore
+# Spyder project settings
+.spyderproject
+
+# Rope project settings
+.ropeproject
+
+
+# self added
+.idea/*
+data/movie/*
+!data/movie/item_index2entity_id.txt
+!data/movie/ratings.dat
+!data/movie/kg.txt
+data/book/*
+!data/book/item_index2entity_id.txt
+!data/book/BX-Book-Ratings.csv
+!data/book/kg.txt
+data/music/*
+!data/music/item_index2entity_id.txt
+!data/music/user_artists.dat
+!data/music/kg.txt
+data/news/*
